Tweaked max width and fixed alignment so everything is all aligned on home page + minor text change

--- a/client/src/css/Features.css
+++ b/client/src/css/Features.css
@@ -58,7 +58,7 @@
 }
 
 .features-card > div:last-child {
-  margin-left: 15px;
+  margin-left: 25px;
 }
 
 .features-card > div:first-child svg {
