--- a/client/src/css/Seperator.css
+++ b/client/src/css/Seperator.css
@@ -4,7 +4,6 @@
   justify-content: space-around;
   align-self: center;
   background: #fff;
-  padding: 15px 30px;
   max-width: none !important;
   margin: 0 !important;
   -webkit-box-shadow: 0px 7px 6px 2px rgba(0, 0, 0, 0.41);
@@ -12,7 +11,17 @@
   box-shadow: 0px 7px 6px 2px rgba(0, 0, 0, 0.41);
 }
 
-.seperator-section > div {
+.seperator-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  max-width: 1250px;
+  width: 100%;
+  padding: 15px 30px;
+  margin: 0 auto;
+}
+
+.seperator-container > div {
   display: flex;
   justify-content: center;
   align-items: center;
